<resources>
    <string name="app_name">ALC 4.0</string>
    <string name="welcome_to_alc_4_0">Welcome to ALC 4.0</string>
    <string name="about_alc_button_text">ABOUT ALC</string>
    <string name="my_profile_button_text">MY PROFILE</string>
    <string name="shows_my_profile_picture">Shows My Profile Picture</string>
    <string name="jonah_karani">Jonah Karani</string>
    <string name="track_android">Track: Android</string>
    <string name="country_nigeria">Country: Nigeria</string>
    <string name="email_jonahkarash_gmail_com">Email: jonahkarash@gmail.com</string>
    <string name="phone_number_25713235313">Phone Number: 25713235313</string>
    <string name="slack_username_jonahkarani">Slack Username: @jonahkarani</string>
    <string name="my_profile_title">My Profile</string>
    <string name="about_alc_title">About ALC</string>
    <string name="alc_main_title">ALC 4 Phase 1</string>

</resources>
